<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoActivity">

    <ImageView
        android:id="@+id/imageViewIdPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_view_photo_content_description"
        app:srcCompat="@android:color/holo_blue_bright" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contraintLayoutImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/contraintLayoutImages"
            app:layout_constraintStart_toStartOf="@id/contraintLayoutImages"
            app:layout_constraintWidth_percent="0.5">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/image_view_add_photo_content_description"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                android:onClick="hacerFoto"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/image_view_select_photo_content_description"
                app:srcCompat="@drawable/ic_image_black_24dp"
                android:onClick="seleccionarFoto"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>